--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="xyz.justsoft.video_thumbnail">
+    android:versionCode="1"
+    android:versionName="1.0">
+    <!-- Eliminar el atributo 'package' -->
+    <application
+        android:name=".VideoThumbnailPlugin"
+        android:label="video_thumbnail"
+        android:icon="@mipmap/ic_launcher">
+        <!-- Otros elementos... -->
+    </application>
 </manifest>
